After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 682372 - warnings when viewing properties on item in Network
warnings when viewing properties on item in Network
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: general
3.4.x
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-08-21 15:58 UTC by William Jon McCann
Modified: 2012-08-22 18:24 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
bt (5.28 KB, text/plain)
2012-08-21 15:58 UTC, William Jon McCann
  Details
more bt (5.15 KB, text/plain)
2012-08-21 16:32 UTC, William Jon McCann
  Details
Don't inspect a null default app (1.32 KB, patch)
2012-08-21 16:33 UTC, William Jon McCann
committed Details | Review
Wait until after widgets have been set up to handle change signals (1.71 KB, patch)
2012-08-22 15:28 UTC, William Jon McCann
committed Details | Review

Description William Jon McCann 2012-08-21 15:58:31 UTC
Created attachment 222042 [details]
bt

Warnings when viewing properties on item in Network.
Comment 1 William Jon McCann 2012-08-21 16:32:38 UTC
Created attachment 222046 [details]
more bt
Comment 2 William Jon McCann 2012-08-21 16:33:01 UTC
Created attachment 222047 [details] [review]
Don't inspect a null default app
Comment 3 Cosimo Cecchi 2012-08-21 19:49:40 UTC
Review of attachment 222047 [details] [review]:

Looks good.
Comment 4 William Jon McCann 2012-08-22 13:00:09 UTC
The second error wasn't fixed.
Comment 5 William Jon McCann 2012-08-22 15:28:11 UTC
Created attachment 222165 [details] [review]
Wait until after widgets have been set up to handle change signals
Comment 6 Cosimo Cecchi 2012-08-22 17:59:09 UTC
Review of attachment 222165 [details] [review]:

Makes sense; can you please also fix this before pushing to master while we're at it?

::: libnautilus-private/nautilus-mime-application-chooser.c
@@ -352,2 @@
 	gtk_app_chooser_widget_set_show_other (GTK_APP_CHOOSER_WIDGET (chooser->details->open_with_widget),
 					       TRUE);

This would be better grouped with the other gtk_app_chooser_widget_set_show_foo functions above.
Comment 7 William Jon McCann 2012-08-22 18:24:17 UTC
Attachment 222165 [details] pushed as a2b0ddd - Wait until after widgets have been set up to handle change signals