Wait until after widgets have been set up to handle change signals

https://bugzilla.gnome.org/show_bug.cgi?id=682372